<resources>
    <string name="app_name">Call It In!</string>
    <string name="calculatorExample">Calculator Example</string>
    <string name="create_new_phone_call">Create New Phone Call</string>
    <string name="enter_customer_name">Enter Customer Name:</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
    <string name="about_call_it_in">About Call It In!</string>
    <string name="about_app">This app allows users to create and save phonebills and calls. The user can then add new call logs or retrieve existing ones.</string>
    <string name="customer_name">Customer Name</string>
    <string name="add_phone_call">Add Phone Call</string>
    <string name="caller_number">Caller Number</string>
    <string name="callee_number">Callee Number</string>
    <string name="call_start_date">Call Start Date</string>
    <string name="call_start_time">Call Start Time</string>
    <string name="call_end_date">Call End Date</string>
    <string name="call_end_time">Call End Time</string>
    <string name="add_new_call_below">Add New Call Below:</string>
    <string name="help_menu">Help Menu</string>
    <string name="back_help_menu">Back To Main Menu</string>
    <string name="about_app_readme">About App (README)</string>
    <string name="call_it_in">Call It In!</string>
    <string name="print_phone_bill">Print Phone Bill</string>
    <string name="search_phone_bill">Search Phone Bill</string>
    <string name="find_customer_bill_to_print">Find Customer Bill to Print</string>
    <string name="print_name_input">Customer Name</string>
    <string name="print_bill_button_text">Print Bill</string>
    <string name="back_print_bill">Back To Main Menu</string>
    <string name="back_to_help_menu">Back to Help Menu</string>
    <string name="am_pm">AM/PM</string>
    <string name="back_to_main_menu">Back To Main Menu</string>
</resources>