<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewPhoneCall">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="122dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_call_below" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/customer_name"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/callerNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/caller_number"
            android:inputType="phone"
            android:autofillHints="" />

        <EditText
            android:id="@+id/calleeNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/callee_number"
            android:inputType="phone"
            android:autofillHints="" />

        <EditText
            android:id="@+id/startDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/call_start_date"
            android:inputType="date"
            android:autofillHints="" />

        <EditText
            android:id="@+id/startTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/call_start_time"
            android:inputType="time"
            android:autofillHints="" />

        <EditText
            android:id="@+id/endDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/call_end_date"
            android:inputType="date"
            android:autofillHints="" />

        <EditText
            android:id="@+id/endTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/call_end_time"
            android:inputType="time"
            android:autofillHints="" />

        <Button
            android:id="@+id/submitNewCall"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:text="@string/add_phone_call" />

        <Button
            android:id="@+id/backNewPhoneCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Back To Main Menu" />

    </LinearLayout>


</RelativeLayout>